cmake_minimum_required(VERSION 3.0)
project(tests LANGUAGES C)

add_executable(comment comment.c)
add_executable(comment_theora comment_theora.c)
add_executable(granulepos granulepos.c)
add_executable(granulepos_theora granulepos_theora.c)
add_executable(noop noop.c)
add_executable(noop_theora noop_theora.c)
target_link_libraries(comment PRIVATE theora)
target_link_libraries(comment_theora PRIVATE theora)
target_link_libraries(granulepos PRIVATE theora)
target_link_libraries(granulepos_theora PRIVATE theora)
target_link_libraries(noop PRIVATE theora)
target_link_libraries(noop_theora PRIVATE theora)
add_test(test_comment comment)
add_test(test_comment_theora comment_theora)
add_test(test_granulepos granulepos)
add_test(test_granulepos_theora granulepos_theora)
add_test(test_noop noop)
add_test(test_noop_theora noop_theora)
